@@ -33,7 +33,7 @@ bind to the ``mecab`` library.
 
 Configuration
 -------------
-As long as the ``mecab`` (and ``mecab-config`` for \*nix and Mac OS) executables 
+As long as the ``mecab`` (and ``mecab-config`` for \*nix and Mac OS) executables
 are on your ``PATH``, ``natto-py`` should just work without any explicit configuration.
 
 If not, or if you are using a custom-built system dictionary located in a
@@ -48,7 +48,7 @@ encoding.
 
 e.g., for Mac OS X::
 
-    export MECAB_PATH=/usr/local/Cellar/mecab/0.996/lib/libmecab.dylib 
+    export MECAB_PATH=/usr/local/Cellar/mecab/0.996/lib/libmecab.dylib
     export MECAB_CHARSET=utf8
 
 e.g., for bash on UNIX/Linux::
@@ -80,14 +80,15 @@ Instantiate a reference to the ``mecab`` library, and display some details::
         print(nm)
 
     # displays details about the MeCab instance
-    <natto.mecab.MeCab 
-     tagger=<cdata 'mecab_t *' 0x000000000037AB40>, 
-     options={}, 
-     dicts=[<natto.dictionary.DictionaryInfo 
-             pointer=<cdata 'mecab_dictionary_info_t *' 0x00000000003AC530>, 
-             type="0", 
+    <natto.mecab.MeCab
+     lib="/usr/local/lib/libmecab.so",
+     tagger=<cdata 'mecab_t *' 0x000000000037AB40>,
+     options={},
+     dicts=[<natto.dictionary.DictionaryInfo
+             pointer=<cdata 'mecab_dictionary_info_t *' 0x00000000003AC530>,
+             type="0",
              filename="/usr/local/lib/mecab/dic/ipadic/sys.dic",
-             charset="utf8">], 
+             charset="utf8">],
      version="0.996">
 
 Display details about the ``mecab`` system dictionary used::
@@ -96,10 +97,10 @@ Display details about the ``mecab`` system dictionary used::
         print(sysdic)
 
     # displays the MeCab system dictionary info
-    <natto.dictionary.DictionaryInfo 
-     pointer=<cdata 'mecab_dictionary_info_t *' 0x00000000003AC530>, 
-     type=0, 
-     filename="/usr/local/lib/mecab/dic/ipadic/sys.dic", 
+    <natto.dictionary.DictionaryInfo
+     pointer=<cdata 'mecab_dictionary_info_t *' 0x00000000003AC530>,
+     type=0,
+     filename="/usr/local/lib/mecab/dic/ipadic/sys.dic",
      charset="utf8">
 
 
@@ -128,7 +129,7 @@ information related to each morpheme::
         for n in nodes:
     ...     if not n.is_eos():
     ...         print('%s\t%s' % (n.surface, n.cost))
-    ... 
+    ...
     ピンチ	3348
     の	3722
     時	5176
@@ -146,18 +147,18 @@ You can read more about ``natto-py`` on the `project Wiki`_.
 
 Contributing to natto-py
 ------------------------
-- Use mercurial_ and `check out the latest code at Bitbucket`_ to make sure the 
+- Use mercurial_ and `check out the latest code at Bitbucket`_ to make sure the
   feature hasn't been implemented or the bug hasn't been fixed yet.
-- `Browse the issue tracker`_ to make sure someone already hasn't requested it 
+- `Browse the issue tracker`_ to make sure someone already hasn't requested it
   and/or contributed it.
 - Fork the project.
 - Start a feature/bugfix branch.
 - Commit and push until you are happy with your contribution.
-- Make sure to add tests for it. This is important so I don't break it in a 
+- Make sure to add tests for it. This is important so I don't break it in a
   future version unintentionally. I use unittest_ as it is very natural
   and easy-to-use.
-- Please try not to mess with the ``setup.py``, ``CHANGELOG``, or version 
-  files. If you must have your own version, that is fine, but please isolate 
+- Please try not to mess with the ``setup.py``, ``CHANGELOG``, or version
+  files. If you must have your own version, that is fine, but please isolate
   to its own commit so I can cherry-pick around it.
 
 Changelog
@@ -167,7 +168,7 @@ Please see the ``CHANGELOG`` for the release history.
 Copyright
 ---------
 Copyright |copy| 2014, Brooke M. Fujita. All rights reserved. Please see the
-LICENSE file for further details. 
+LICENSE file for further details.
 
 .. _Python: http://www.python.org/
 .. _MeCab: http://mecab.googlecode.com/svn/trunk/mecab/doc/index.html
