@@ -15,7 +15,7 @@ with codecs.open(path.join(path.abspath(path.dirname(__file__)), 'README.rst'),
 setup(
     name='natto-py',
 
-    version='0.0.3',
+    version='0.0.5',
 
     description=' '.join(['A Tasty Python Binding with MeCab',
                           '(FFI-based, no SWIG or compiler necessary)']),
@@ -68,5 +68,5 @@ setup(
 
     test_suite="tests.test_suite",
 
-    use_2to3=True
+    **extra
 )
